--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -186,4 +186,43 @@ msgstr ""
 
 #: templates/admin/base_site.html:7
 msgid "Django administration"
-msgstr ""
+msgstr "Администрирование Django"
+
+msgid "Вход"
+msgstr "Вход"
+
+msgid "С возвращением!"
+msgstr "С возвращением!"
+
+msgid "Войдите в свой аккаунт, чтобы продолжить обучение"
+msgstr "Войдите в свой аккаунт, чтобы продолжить обучение"
+
+msgid "Войти в аккаунт"
+msgstr "Войти в аккаунт"
+
+msgid "или"
+msgstr "или"
+
+msgid "Войти как гость"
+msgstr "Войти как гость"
+
+msgid "Нет аккаунта?"
+msgstr "Нет аккаунта?"
+
+msgid "Зарегистрироваться"
+msgstr "Зарегистрироваться"
+
+msgid "Регистрация"
+msgstr "Регистрация"
+
+msgid "Создать аккаунт"
+msgstr "Создать аккаунт"
+
+msgid "Присоединяйтесь к нам и начните учить французский сегодня!"
+msgstr "Присоединяйтесь к нам и начните учить французский сегодня!"
+
+msgid "Уже есть аккаунт?"
+msgstr "Уже есть аккаунт?"
+
+msgid "Войти"
+msgstr "Войти"
