--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -13,6 +13,45 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgid "Вход"
+msgstr "Вхід"
+
+msgid "С возвращением!"
+msgstr "З поверненням!"
+
+msgid "Войдите в свой аккаунт, чтобы продолжить обучение"
+msgstr "Увійдіть у свій акаунт, щоб продовжити навчання"
+
+msgid "Войти в аккаунт"
+msgstr "Увійти в акаунт"
+
+msgid "или"
+msgstr "або"
+
+msgid "Войти как гость"
+msgstr "Увійти як гість"
+
+msgid "Нет аккаунта?"
+msgstr "Немає акаунту?"
+
+msgid "Зарегистрироваться"
+msgstr "Зареєструватися"
+
+msgid "Регистрация"
+msgstr "Реєстрація"
+
+msgid "Создать аккаунт"
+msgstr "Створити акаунт"
+
+msgid "Присоединяйтесь к нам и начните учить французский сегодня!"
+msgstr "Приєднуйтесь до нас і почніть вчити французьку сьогодні!"
+
+msgid "Уже есть аккаунт?"
+msgstr "Вже є акаунт?"
+
+msgid "Войти"
+msgstr "Увійти"
+
 #: admin.py:25
 msgid "Урок (RU)"
 msgstr "Урок (RU)"
